<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ACTIVITY.AllDataDisplayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_20sdp"
            app:cardBackgroundColor="@color/light_sky2"
            app:cardCornerRadius="@dimen/_10sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/imgBack"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:src="@drawable/backbg" />

                    <ImageView
                        android:id="@+id/imgLike"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:scaleType="fitEnd"
                        android:src="@drawable/filllike" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgBeach"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_300sdp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:scaleType="centerCrop" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txtPlaceName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Place_Name"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:src="@drawable/location" />

                        <TextView
                            android:id="@+id/txtLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:hint="@string/Location"
                            android:textColor="@color/black" />


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="@dimen/_15sdp"
                                android:layout_height="@dimen/_15sdp"
                                android:scaleType="fitEnd"
                                android:src="@drawable/star" />

                            <TextView
                                android:id="@+id/txtRate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_5sdp"
                                android:hint="@string/Rate"
                                android:textColor="@color/black" />
                        </LinearLayout>

                    </LinearLayout>

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none">

                        <TextView
                            android:id="@+id/txtDescripition"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:hint="@string/Descripition" />


                    </ScrollView>


                </LinearLayout>


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/sky3"
                android:text="@string/Book_Now"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</LinearLayout>